--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Dasmoto's Arts & Crafts</title>
-  <link href="./style.css" type="text/css" rel="stylesheet">
+    <!--
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nosifer&display=swap" rel="stylesheet">
+    -->
+    <title>Dasmoto's Arts & Crafts</title>
+    <link href="./style.css" type="text/css" rel="stylesheet">
+    <script type="text/javascript" src="./index.js"></script>
 </head>
 <body>
 
