--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Brushes Section -->
 
   <div class="item">
-    <h2 id="brush">Brushes</h2>
+    <h2 id="brush">Brushes changes made</h2>
     <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/hacksaw.jpeg"/>
     <h3>Hacksaw Brushes</h3>
     <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <span class="price">Starting at $3.00 / brush.</span></p>
